Mostly adding finals